🐞 fix: header toggle style.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,18 @@ body {
   @apply block flex-1 animate-[shimmer_2s_infinite] bg-gradient-to-r from-transparent via-neutral-500/30 to-transparent content-['\00a0'];
 }
 
+.hoverable-default {
+  @apply border-neutral-200 bg-neutral-200/30 text-neutral-800 hover:border-neutral-300 hover:bg-neutral-200 dark:border-neutral-800 dark:bg-neutral-800/30 dark:text-neutral-100 dark:hover:border-neutral-600 dark:hover:bg-neutral-800;
+}
+
+.hoverable-blue {
+  @apply bg-blue-600 text-white hover:bg-blue-700 dark:hover:bg-blue-500;
+}
+
+.hoverable-red {
+  @apply bg-red-600 text-white hover:bg-red-700 dark:hover:bg-red-500;
+}
+
 .prose pre {
   @apply my-0 p-0 [&>code]:p-3;
 }
